--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="header">
         <h1>Guess my color</h1>
-        <p>Click the color box that match whit <span id="rgbColorDisplay">RGBcolor</span></p>
+        <p>Click the color box that match whit<br><span id="rgbColorDisplay">RGBcolor</span></p>
         <div id="messageBox">
             <span id="message"></span>
         </div>
