--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Guess my color</title>
 </head>
 <body>
 
-    <div id="header">
-        <h1>Guess my color</h1>
-        <p>Click the color box that match whit<br><span id="rgbColorDisplay">RGBcolor</span></p>
+    <div class="mb-2" id="header">
+        <h1 class="text-border text-sp">Guess my color</h1>
+        <p class="text-border text-sp">Click the color box that match whit<br><span id="rgbColorDisplay">RGBcolor</span></p>
         <div id="messageBox">
-            <span id="message"></span>
+            <span class="text-border text-sp" id="message"></span>
         </div>
     </div>
 
