--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- SOCIAL MEDIA TAGS-->
+    <meta name="title" content="Guess My Color - Identify colors by reading the RGB codes">
+    <meta name="description" content="Get training on identifying color by reading RGB codes and become an RGB master.">
+
+    <meta property="og:title" content="Guess My Color - Identify colors by reading the RGB codes">
+    <meta property="og:description" content="Get training on identifying color by reading RGB codes and become an RGB master.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/ThonyNava/me/master/img/thony_nava.jpg">
+    <meta property="og:url" content="https://thonynava.github.io/toDoList/">
+
+    <meta name="twitter:title" content="Guess My Color - Identify colors by reading the RGB codes">
+    <meta name="twitter:description" content="Get training on identifying color by reading RGB codes and become an RGB master.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/ThonyNava/me/master/img/thony_nava.jpg">
+    <meta name="twitter:card" content="Get training on identifying color by reading RGB codes and become an RGB master.">
+
+    <link rel="icon" href="https://raw.githubusercontent.com/ThonyNava/me/master/img/isotipo-favicon.png" type="image/png">
+
+    <!-- OTHER TAGS-->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -44,6 +62,98 @@
             </div>
         </section>
     </div>
+
+    <!-- Footer - Thony Nava -->
+
+    <div class="footerBox d-flexC">
+            <div class="footerBoxSolid d-flexC">
+                <p class="m-0 text-tn">
+                    <a href="https://thonynava.github.io/me/">Thony Nava</a>
+                </p>
+            </div>
+            <div class="d-flexC">
+                <a class="iconBoxCircle d-flexC" href="https://thonynava.github.io/me/">
+                    <img src="https://raw.githubusercontent.com/ThonyNava/me/master/img/isotipo-favicon.png" alt="Thony Nava Icon">
+                </a>
+            </div>
+        </div>
+
+        <style>
+
+            body,
+            #main-container{
+                margin: 0;
+                height: 100vh;
+                display: flex;
+                flex-direction: column;
+                overflow: hidden;
+            }
+
+            .d-flexC{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .m-0{
+                margin: 0;
+            }
+
+            .footerBox{
+                position: sticky;
+                margin-top: -55px;
+                width: 100vw;
+                flex-direction: column-reverse;
+            }
+
+            .iconBoxCircle{
+                margin-bottom: -12px;
+                width: 24px;
+                height: 24px;
+                border-radius: 50%;
+                box-shadow: 0 0 12px rgba(255, 255, 255, 0.6);
+                position: relative;
+                overflow: hidden;
+                transition: 0.3s linear;
+            }
+
+            img{
+                width: 100%;
+            }
+
+            .footerBoxSolid{
+                box-shadow: 0px 8px 12px 12px rgba(255, 255, 255, 0.5);
+                border-radius: 50%/100% 100% 0 0;
+                padding: 20px 0 5px 0;
+                width: 100vw;
+                position: relative;
+                border-color: #2C5364 transparent transparent transparent;
+                border-bottom: none;
+                background: #0575E6;  /* fallback for old browsers */
+                background: -webkit-linear-gradient(to top, #021B79, #0575E6);  /* Chrome 10-25, Safari 5.1-6 */
+                background: linear-gradient(to top, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                transition: 0.3s linear;
+            }
+
+            .footerBox:hover .footerBoxSolid{
+                box-shadow: 0px 8px 12px 12px rgba(255, 255, 255, 1);
+                transition: 0.3s linear;
+            }
+
+            .footerBox:hover .iconBoxCircle{
+                margin-bottom: -14px;
+                width: 26px;
+                height: 26px;
+                box-shadow: 0 0 12px rgba(255, 255, 255, 1);
+                transition: 0.3s linear;
+            }
+
+            .text-tn a{
+                color: white;
+                text-decoration: none;
+            }
+        </style>
+    <!--/ Footer - Thony Nava -->
 
     <script src="script.js"></script>
     
