--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
             }
 
             .text-tn a{
+                font-family: Helvetica, sans-serif;
+                font-size: 18px;
                 color: white;
                 text-decoration: none;
             }
